added event listener for image

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Pokemon Memory Game</h1>
-    <div class="displayPokemon">
-      <ul>
+    <div class="container">
+      <h1>Pokemon Memory Game</h1>
+      <div class="displayPokemon">
         <!-- Render Pokemon Images here -->
-      </ul>
+      </div>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
