--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
     <div class="container">
       <h1>Pokemon Memory Game</h1>
-      <div class="displayPokemon">
+      <ul class="displayPokemon">
         <!-- Render Pokemon Images here -->
-      </div>
+      </ul>
     </div>
 
     <script src="script.js"></script>
