--- a/index.html
+++ b/index.html
@@ -4,17 +4,35 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&family=VT323&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./styles/styles.css" />
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
-      <h1>Pokemon Memory Game</h1>
-      <ul class="displayPokemon">
-        <!-- Render Pokemon Images here -->
-      </ul>
-    </div>
-
+    <!-- HEADER STARTS -->
+    <header>
+      <h1>POKEMON MEMORY GAME</h1>
+    </header>
+    <!-- HEADER ENDS -->
+    <!-- MAIN STARTS -->
+    <main>
+      <div class="container">
+        <ul class="displayPokemon">
+          <!-- Render Pokemon Images here -->
+        </ul>
+      </div>
+    </main>
+    <!-- MAIN ENDS -->
+    <!-- FOOTER STARTS -->
+    <footer>
+      <p>Created at Juno College 2022</p>
+    </footer>
+    <!-- FOOTER ENDS -->
     <script src="script.js"></script>
   </body>
 </html>
