--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <ul class="displayPokemon">
           <!-- Render Pokemon Images here -->
         </ul>
+        <h2 class="message">It's a match!</h2>
       </div>
     </main>
     <!-- MAIN ENDS -->
