added moves count and fixed background

--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
         <ul class="displayPokemon">
           <!-- Render Pokemon Images here -->
         </ul>
-        <h2 class="message">It's a match!</h2>
+        <h2 class="message">
+          <!-- Render Message -->
+        </h2>
       </div>
+      <p>Moves: <span class="moves">0</span></p>
     </main>
     <!-- MAIN ENDS -->
     <!-- FOOTER STARTS -->
