fixed issue of not being able to click if you click same image twice: display:none instead of opacity

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <!-- HEADER ENDS -->
     <!-- MAIN STARTS -->
     <main>
+      <div class="scoreBoard">
+        <div class="wrapper">
+          <p>Moves: <span class="moves">0</span></p>
+        </div>
+      </div>
       <div class="container">
         <ul class="displayPokemon">
           <!-- Render Pokemon Images here -->
@@ -29,7 +34,6 @@
           <!-- Render Message -->
         </h2>
       </div>
-      <p>Moves: <span class="moves">0</span></p>
     </main>
     <!-- MAIN ENDS -->
     <!-- FOOTER STARTS -->
