added play again button and handler

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         <h2 class="message">
           <!-- Render Message -->
         </h2>
+        <div class="btnContainer">
+          <button class="button">Play Again?</button>
+        </div>
       </div>
     </main>
     <!-- MAIN ENDS -->
