added difficulty for game, adjusted flip animation

--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
       <div class="wrapper">
         <div class="scoreBoard">
           <p>Moves:<span class="moves">0</span></p>
+          <form action="">
+            <label for="difficulty">Select your difficulty</label>
+            <select name="difficulty" id="difficulty">
+              <option value="5">10 Tiles</option>
+              <option value="6">12 Tiles</option>
+              <option value="8">16 Tiles</option>
+              <option value="10">20 Tiles</option>
+            </select>
+          </form>
         </div>
       </div>
       <div class="container">
