--- a/index.html
+++ b/index.html
@@ -24,15 +24,17 @@
       <div class="wrapper">
         <div class="scoreBoard">
           <p>Moves:<span class="moves">0</span></p>
+          <p>Round:<span class="round">1</span></p>
         </div>
       </div>
       <div class="container">
-        <ul class="displayPokemon">
-          <!-- Render Pokemon Images here -->
-        </ul>
         <p class="message">
           <!-- Render Message -->
         </p>
+        <ul class="displayPokemon">
+          <!-- Render Pokemon Images here -->
+        </ul>
+
         <div class="btnContainer">
           <button class="button">Play Again?</button>
         </div>
