added bg music and on/off button

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         </ul>
 
         <div class="btnContainer">
-          <button class="button">Play Again?</button>
+          <button class="button" id="playAgain">Play Again?</button>
         </div>
         <div class="startGame">
-          <h3>Select your difficulty:</h3>
+          <h3>Gotta Match 'Em All</h3>
           <form action="">
             <label for="difficulty">Select your difficulty</label>
             <select name="difficulty" id="difficulty">
@@ -52,6 +52,9 @@
           </form>
         </div>
       </div>
+      <button class="button musicButton" id="musicButton">
+        Music: <span id="audioControl">ON</span>
+      </button>
     </main>
     <!-- MAIN ENDS -->
     <!-- FOOTER STARTS -->
