added offset for api fetch to allow random pokemon each time

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/styles.css" />
-    <title>Pokemon Memory Game</title>
+    <title>Pokemon Memory Game | Gotta Match 'Em All!</title>
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
   </head>
   <body>
