media queries and fixed radio button styling

--- a/index.html
+++ b/index.html
@@ -42,22 +42,48 @@
           <div class="startGame">
             <h3>Gotta Match 'Em All</h3>
             <form action="">
-              <label for="difficulty">Select your difficulty</label>
+              <legend for="difficulty" class="difficultyLabel">
+                Select your difficulty
+              </legend>
               <fieldset name="difficulty" class="difficulty" id="difficulty">
                 <div class="tileSelection">
-                  <input type="radio" value="5" id="5" name="tiles" />
+                  <input
+                    class="sr-only"
+                    type="radio"
+                    value="5"
+                    id="5"
+                    name="tiles"
+                  />
                   <label for="5">10 tiles</label>
                 </div>
                 <div class="tileSelection">
-                  <input type="radio" value="6" id="6" name="tiles" />
+                  <input
+                    class="sr-only"
+                    type="radio"
+                    value="6"
+                    id="6"
+                    name="tiles"
+                  />
                   <label for="6">12 tiles</label>
                 </div>
                 <div class="tileSelection">
-                  <input type="radio" value="8" id="8" name="tiles" />
+                  <input
+                    class="sr-only"
+                    type="radio"
+                    value="8"
+                    id="8"
+                    name="tiles"
+                  />
                   <label for="8">16 tiles</label>
                 </div>
                 <div class="tileSelection">
-                  <input type="radio" value="10" id="10" name="tiles" />
+                  <input
+                    class="sr-only"
+                    type="radio"
+                    value="10"
+                    id="10"
+                    name="tiles"
+                  />
                   <label for="10">20 tiles</label>
                 </div>
               </fieldset>
