added loader for api fetch, and updated some styling

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           <p>Round:<span class="round">1</span></p>
         </div>
         <div class="container">
+          <div class="loader"></div>
           <p class="message">
             <!-- Render Message -->
           </p>
@@ -43,7 +44,7 @@
             <h3>Gotta Match 'Em All</h3>
             <form action="">
               <legend for="difficulty" class="difficultyLabel">
-                Select your difficulty
+                Select your difficulty:
               </legend>
               <fieldset name="difficulty" class="difficulty" id="difficulty">
                 <div class="tileSelection">
@@ -53,6 +54,7 @@
                     value="5"
                     id="5"
                     name="tiles"
+                    checked
                   />
                   <label for="5">10 tiles</label>
                 </div>
