--- a/index.html
+++ b/index.html
@@ -103,5 +103,6 @@
     </footer>
     <!-- FOOTER ENDS -->
     <script src="script.js"></script>
+    <script type="module" src="database.js"></script>
   </body>
 </html>
