connected database to game

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <p>Created at Juno College 2022</p>
     </footer>
     <!-- FOOTER ENDS -->
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
     <script type="module" src="database.js"></script>
   </body>
 </html>
