added handlers for sound button and menu close

--- a/index.html
+++ b/index.html
@@ -107,12 +107,14 @@
             </form>
           </div>
           <div class="menu settingsMenu" id="settingsMenu">
-            <button class="button">
+            <button class="button closeButton" id="closeButton">X</button>
+            <button class="button" id="soundButton">
               Sound: <span id="soundControl">ON</span>
             </button>
             <button class="button musicButton" id="musicButton">
               Music: <span id="musicControl">OFF</span>
             </button>
+            <button class="button" id="mainMenu">Main Menu</button>
           </div>
         </div>
       </div>
