changed setting button size and tweaked sound button handler

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <div class="menu settingsMenu" id="settingsMenu">
             <button class="button closeButton" id="closeButton">X</button>
             <button class="button" id="soundButton">
-              Sound: <span id="soundControl">ON</span>
+              Sound Effects: <span id="soundControl">ON</span>
             </button>
             <button class="button musicButton" id="musicButton">
               Music: <span id="musicControl">OFF</span>
