updated randomizer method

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </button>
           </div>
           <div class="menu" id="startGame">
-            <h3>Gotta Match 'Em All</h3>
+            <h3>Gotta Match 'Em All!</h3>
             <form action="">
               <fieldset name="userName" class="userName">
                 <label for="inputName">Enter Your Name</label>
