updated media queries and settings icon

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                     id="5"
                     name="tiles"
                     aria-checked="true"
+                    checked
                   />
                   <label tabindex="0" for="5">10 tiles</label>
                 </div>
